logs/offboard_pkg/build.make.079.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘void TaskManager::get_att(double&, tf::Quaternion&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:57:65: error: no match for call to ‘(tf::Quaternion) (geometry_msgs::Quaternion_<std::allocator<void> >::_x_type&, geometry_msgs::Quaternion_<std::allocator<void> >::_y_type&, geometry_msgs::Quaternion_<std::allocator<void> >::_z_type&, geometry_msgs::Quaternion_<std::allocator<void> >::_w_type&)’
   57 |     local_pose.pose.orientation.z, local_pose.pose.orientation.w);
      |                                                                 ^
make[2]: *** [CMakeFiles/main.dir/build.make:76: CMakeFiles/main.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:723: CMakeFiles/main.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
